responsive layout made

--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
         <li>Features</li>
       </ul>
     </nav>
+    <main class="main-content">
+      <aside class="aside-left">aside-left</aside>
+      <section class="main-content-section">main-content-section</section>
+      <aside class="aside-right">aside-right</aside>
+    </main>
+    <footer class="footer">footer</footer>
   </body>
 </html>
